feat: update cv

--- a/resume.html
+++ b/resume.html
@@ -962,7 +962,7 @@ section .location {
             <ul class="highlights">
               <li><p><p>Led a team of 4 developers in an IoT project, managing sprint planning, client communication, and code reviews.</p></p></li>
               <li><p><p>Developed middleware in C for a Linux-based Zigbee gateway, enabling IoT device communication.</p></p></li>
-              <li><p><p>Designed firmware for multiple embedded platforms including STM32, ESP32, and Nordic SoCs with Zephyr OS or FreeRTOS.</p></p></li>
+              <li><p><p>Designed firmware (C or C++) for multiple embedded platforms including STM32, ESP32, and Nordic SoCs with Zephyr OS or FreeRTOS.</p></p></li>
               <li><p><p>Implemented AI-based anomaly detection on embedded systems using NanoEdge AI.</p></p></li>
               <li><p><p>Developed a Python-based IoT monitoring system with Azure IoT Hub for remote data processing.</p></p></li>
               <li><p><p>Integrated various wireless protocols including Zigbee, BLE, Wi-Fi, and MQTT for IoT applications.</p></p></li>
