feat: update cv

--- a/resume.html
+++ b/resume.html
@@ -1013,6 +1013,7 @@ section .location {
           </header>
           <div class="item">
             <ul class="highlights">
+                <li><p><p>Developed middleware in C for a Linux-based Zigbee gateway, enabling seamless communication with IoT home devices via an API.</p></p></li>
                 <li><p><p>Led a team of 4 developers, managing sprint tasks, client communication, and code reviews.</p></p></li>
                 <li><p><p>Implemented a Zigbee communication layer and exposed a user-friendly API.</p></p></li>
             </ul>
@@ -1025,6 +1026,7 @@ section .location {
           </header>
           <div class="item">
             <ul class="highlights">
+                <li><p><p>Designed and implemented firmware for an ESP32-based smart feeder with AI-powered cat detection.</p></p></li>
                 <li><p><p>Integrated TensorFlow AI for real-time object detection.</p></p></li>
                 <li><p><p>Implemented Wi-Fi communication, camera integration, and Time-of-Flight sensors.</p></p></li>
                 <li><p><p>Developed secure communication using a Secure Element.</p></p></li>
@@ -1038,6 +1040,7 @@ section .location {
           </header>
           <div class="item">
             <ul class="highlights">
+                <li><p><p>Built firmware in C++ for an ESP32 and STM32-based robotic vacuum cleaner running on Zephyr OS.</p></p></li>
                 <li><p><p>Implemented BLE communication for remote control.</p></p></li>
                 <li><p><p>Developed TFT display interface using LVGL.</p></p></li>
                 <li><p><p>Integrated Modbus RTU for industrial communication.</p></p></li>
@@ -1052,6 +1055,7 @@ section .location {
           </header>
           <div class="item">
             <ul class="highlights">
+                <li><p><p>Developed an IoT monitoring system on a Linux-based device, utilizing Python for data collection and processing.</p></p></li>
                 <li><p><p>Integrated Azure IoT Hub for remote device monitoring.</p></p></li>
                 <li><p><p>Developed a secure and scalable cloud communication architecture.</p></p></li>
                 <li><p><p>Designed automated data logging and processing pipelines.</p></p></li>
@@ -1065,6 +1069,7 @@ section .location {
           </header>
           <div class="item">
             <ul class="highlights">
+                <li><p><p>Developed real-time embedded software for motor control in aerospace applications.</p></p></li>
                 <li><p><p>Implemented firmware in C using TI-RTOS on DSP Delfino.</p></p></li>
                 <li><p><p>Designed low-level drivers for CAN, ADC, DAC, I2C, and SPI.</p></p></li>
                 <li><p><p>Conducted validation and testing of motor control algorithms.</p></p></li>
@@ -1078,6 +1083,7 @@ section .location {
           </header>
           <div class="item">
             <ul class="highlights">
+                <li><p><p>Developed software for railway safety-critical systems.</p></p></li>
                 <li><p><p>Implemented real-time control firmware on an FPGA-based SoC (Cyclone III) running EcoS.</p></p></li>
                 <li><p><p>Developed battery monitoring firmware using Modbus RS485 communication.</p></p></li>
                 <li><p><p>Wrote software architecture and validation documentation.</p></p></li>
